edited card data

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/coffee.jpg" alt="Shoes" class="w-full h-40"/></figure>
                         <div class="card-body">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Coffee Js</h2>
+                            <p>
+                                Price: $ <span>108</span>
+                            </p>
                             <div class="card-actions justify-end">
                                 <button class="btn btn-primary">Buy Now</button>
                             </div>
@@ -58,8 +60,10 @@
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/heart_js.jpg" alt="Shoes" class="w-full h-40"/></figure>
                         <div class="card-body">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Heart Js</h2>
+                            <p>
+                                Price: $ <span>113</span>
+                            </p>
                             <div class="card-actions justify-end">
                                 <button class="btn btn-primary">Buy Now</button>
                             </div>
@@ -70,8 +74,10 @@
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/panda.png" alt="Shoes" class="w-full h-40"/></figure>
                         <div class="card-body">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Panda Js</h2>
+                            <p>
+                                Price: $ <span>112</span>
+                            </p>
                             <div class="card-actions justify-end">
                                 <button class="btn btn-primary">Buy Now</button>
                             </div>
@@ -82,20 +88,10 @@
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/umbrella.png" alt="Shoes" class="w-full h-40"/></figure>
                         <div class="card-body">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
-                            <div class="card-actions justify-end">
-                                <button class="btn btn-primary">Buy Now</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="card card-compact w-full bg-base-100 shadow-xl">
-                        <figure><img src="img/vue-js.jpg" alt="Shoes" class="w-full h-40"/></figure>
-                        <div class="card-body">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Umberlla Js</h2>
+                            <p>
+                                Price: $ <span>105</span>
+                            </p>
                             <div class="card-actions justify-end">
                                 <button class="btn btn-primary">Buy Now</button>
                             </div>
