--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </button>
         </div>
     </header>
-    <main class="w-9/12 mx-auto mt-5">
+    <main class="w-9/12 mx-auto mt-5 pb-20">
         <div class="grid grid-cols-2 gap-4 divide-x">
             <div class="grid grid-cols-2 gap-4">
                 <div>
@@ -51,7 +51,7 @@
                                 Price: $ <span>108</span>
                             </p>
                             <div class="card-actions justify-end">
-                                <button class="btn btn-primary" id="product-1" onclick="addToCart(this)">Buy Now</button>
+                                <button class="btn btn-primary" onclick="addToCart(this)">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 Price: $ <span>113</span>
                             </p>
                             <div class="card-actions justify-end">
-                                <button class="btn btn-primary" id="product-2" onclick="addToCart(this)">Buy Now</button>
+                                <button class="btn btn-primary" onclick="addToCart(this)">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                                 Price: $ <span>112</span>
                             </p>
                             <div class="card-actions justify-end">
-                                <button class="btn btn-primary" id="product-3" onclick="addToCart(this)">Buy Now</button>
+                                <button class="btn btn-primary" onclick="addToCart(this)">Buy Now</button>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,21 @@
                                 Price: $ <span>105</span>
                             </p>
                             <div class="card-actions justify-end">
-                                <button class="btn btn-primary" id="product-3" onclick="addToCart(this)">Buy Now</button>
+                                <button class="btn btn-primary" onclick="addToCart(this)">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="card card-compact w-full bg-base-100 shadow-xl">
+                        <figure><img src="img/vue-js.jpg" alt="Shoes" class="w-full h-40"/></figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Vue Js</h2>
+                            <p>
+                                Price: $ <span>125</span>
+                            </p>
+                            <div class="card-actions justify-end">
+                                <button class="btn btn-primary" onclick="addToCart(this)">Buy Now</button>
                             </div>
                         </div>
                     </div>
