add comment and change a color

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <main class="w-9/12 mx-auto mt-5 pb-20">
         <div class="grid grid-cols-2 gap-4 divide-x">
             <div class="grid grid-cols-2 gap-4">
+                <!-- product 1 -->
                 <div>
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/coffee.jpg" alt="Shoes" class="w-full h-40"/></figure>
@@ -56,6 +57,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- product 2 -->
                 <div>
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/heart_js.jpg" alt="Shoes" class="w-full h-40"/></figure>
@@ -70,6 +72,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- product 3 -->
                 <div>
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/panda.png" alt="Shoes" class="w-full h-40"/></figure>
@@ -84,6 +87,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- product 4 -->
                 <div>
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/umbrella.png" alt="Shoes" class="w-full h-40"/></figure>
@@ -98,6 +102,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- product 5 -->
                 <div>
                     <div class="card card-compact w-full bg-base-100 shadow-xl">
                         <figure><img src="img/vue-js.jpg" alt="Shoes" class="w-full h-40"/></figure>
@@ -115,7 +120,7 @@
             </div>
             <!-- CART -->
             <div>
-                <p class="text-4xl text-center">Total added Products <span id="total-products" class="text-green-500">0</span>
+                <p class="text-4xl text-center">Total added Products <span id="total-products" class="text-blue-500">0</span>
                 </p>
                 <div class="overflow-x-auto">
                     <table class="table table-zebra w-full">
